--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -1,3 +1,23 @@
 h1 マイページ
 
 = link_to 'Sing out', destroy_user_session_path, method: :delete
+
+= form_for @outlay, method: :post do |f|
+  = f.label :amount
+  = f.number_field :amount
+  br
+  = f.label :note
+  = f.text_field :note
+  br
+  = f.submit 'OK'
+
+h2 支出
+
+table
+  tr
+    th=t 'activerecord.attributes.outlay.amount'
+    th=t 'activerecord.attributes.outlay.note'
+  - @outlays.each do |outlay|
+    tr
+      td= number_to_currency(outlay.amount, precision: 0, unit: '円', format: '%n%u')
+      td= outlay.note
