--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -2,9 +2,10 @@ h1 マイページ
 
 = link_to 'Sing out', destroy_user_session_path, method: :delete
 
-= form_for @outlay, method: :post do |f|
+= form_for @outlay, method: :post, builder: CustomFormBuilder do |f|
   = f.label :amount
   = f.number_field :amount
+  = f.error_messages_on :amount
   br
   = f.label :note
   = f.text_field :note
