--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -6,8 +6,4 @@ h1 マイページ
 
 h2 支出
 
-table
-  tr
-    th=t 'activerecord.attributes.outlay.amount'
-    th=t 'activerecord.attributes.outlay.note'
-  = render @outlays
+= render partial: 'outlays/list'
