--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -6,3 +6,6 @@ table
     tr
       td= number_to_currency(outlay.amount, precision: 0, unit: '円', format: '%n%u')
       td= outlay.note
+  tr
+    th 合計
+    td= number_to_currency(current_user.total_amount, precision: 0, unit: '円', format: '%n%u')
