支出登録時に費目を選択できるようにした

--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -1,11 +1,14 @@
 table
   tr
+    th=t 'activerecord.attributes.outlay.expense_item_id'
     th=t 'activerecord.attributes.outlay.amount'
     th=t 'activerecord.attributes.outlay.note'
-  - current_user.outlays.each do |outlay|
+  - current_user.outlays.created.each do |outlay|
     tr
+      td= outlay.expense_item.name
       td= number_to_yen(outlay.amount)
       td= outlay.note
   tr
     th 合計
     td= number_to_yen(current_user.total_amount)
+    td
