--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -3,7 +3,7 @@ table
     th=t 'activerecord.attributes.outlay.expense_item_id'
     th=t 'activerecord.attributes.outlay.amount'
     th=t 'activerecord.attributes.outlay.note'
-  - current_user.outlays.created.each do |outlay|
+  - outlays.each do |outlay|
     tr
       td= outlay.expense_item.name
       td= number_to_yen(outlay.amount)
