--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -1,6 +1,6 @@
 h1 マイページ
 
-= link_to 'Sing out', destroy_user_session_path, method: :delete
+= link_to 'Sign out', destroy_user_session_path, method: :delete
 
 = render partial: 'outlays/form', locals: {outlay: @outlay}
 
