--- a/app/views/outlays/_form.html.slim
+++ b/app/views/outlays/_form.html.slim
@@ -2,6 +2,7 @@
   = f.label :expense_item_id
   = f.collection_select :expense_item_id, current_user.expense_items.ordered, :id, :name
   = f.error_messages_on :expense_item_id
+  = link_to '変更する', expense_items_path
   br
   = f.label :amount
   = f.number_field :amount
