--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,8 @@
 doctype html
 html
   head
+    meta charset='utf-8'
+    meta name='viewport' content='width=device-width, initial-scale=1.0'
     title
       | FlyingMoney
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
