--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,9 @@ html
     meta name='viewport' content='width=device-width, initial-scale=1.0'
     title
       | FlyingMoney
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'vendor/modernizr'
     = csrf_meta_tags
   body
     = yield
+    = javascript_include_tag 'application'
