--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,5 +9,7 @@ html
     = javascript_include_tag 'vendor/modernizr'
     = csrf_meta_tags
   body
-    = yield
+    .row
+      .large-8.large-centered.columns
+        = yield
     = javascript_include_tag 'application'
