--- a/app/views/expense_items/index.html.slim
+++ b/app/views/expense_items/index.html.slim
@@ -4,7 +4,7 @@ h1 費目管理
 
 = link_to 'トップページへ', root_path
 
-= form_for @expense_item, method: :post, builder: CustomFormBuilder do |f|
+= form_for @expense_item, method: :post do |f|
   = f.label :name
   = f.text_field :name
   = f.error_messages_on :name
