--- a/app/views/outlays/_form.html.slim
+++ b/app/views/outlays/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for outlay, method: :post, builder: CustomFormBuilder do |f|
+= form_for outlay, method: :post do |f|
   fieldset
     legend New
     .row
