--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -1,21 +1,23 @@
 - scope = 'activerecord.attributes.outlay'
 
-- outlay_months.each do |month, outlays|
-  h3= month.strftime('%Y/%m')
+dl.accordion data-accordion=''
+  - outlay_months.each do |month, outlays|
+    dd
+      = link_to month.strftime('%Y/%m'), "#accordion-outlay-#{month.strftime('%Y-%m')}"
+      .content id="accordion-outlay-#{month.strftime('%Y-%m')}"
+        p 合計額: #{number_to_yen(outlays.sum(&:amount))}
 
-  p 合計額: #{number_to_yen(outlays.sum(&:amount))}
-
-  table
-    thead
-      tr
-        th=t :created_at,      scope: scope
-        th=t :expense_item_id, scope: scope
-        th=t :amount,          scope: scope
-        th=t :note,            scope: scope
-    tbody
-      - outlays.each do |outlay|
-        tr
-          td= outlay.created_at.day
-          td= outlay.expense_item.name
-          td= number_to_yen(outlay.amount)
-          td= outlay.note
+        table
+          thead
+            tr
+              th=t :created_at,      scope: scope
+              th=t :expense_item_id, scope: scope
+              th=t :amount,          scope: scope
+              th=t :note,            scope: scope
+          tbody
+            - outlays.each do |outlay|
+              tr
+                td= outlay.created_at.day
+                td= outlay.expense_item.name
+                td= number_to_yen(outlay.amount)
+                td= outlay.note
