--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -9,17 +9,18 @@ dl.accordion data-accordion=''
           span.right #{number_to_yen(outlays.sum(&:amount))}
 
       .active.content id="accordion-outlay-#{month.strftime('%Y-%m')}"
-        table
-          thead
-            tr
-              th=t :created_at,      scope: scope
-              th=t :expense_item_id, scope: scope
-              th=t :amount,          scope: scope
-              th=t :note,            scope: scope
-          tbody
-            - outlays.each do |outlay|
-              tr
-                td= outlay.created_at.day
-                td= outlay.expense_item.name
-                td= number_to_yen(outlay.amount)
-                td= outlay.note
+        .row
+          .small-1.columns.text-center=t :created_at,      scope: scope
+          .small-3.large-2.columns.text-center=t :expense_item_id, scope: scope
+          .small-6.large-7.columns.text-right=t :amount,          scope: scope
+          / .small-2.columns.text-center 操作
+        - outlays.each do |outlay|
+          .row
+            .small-1.columns.text-center= outlay.created_at.day
+            .small-3.large-2.columns.text-center= outlay.expense_item.name
+            .small-6.large-7.columns.text-right
+              - if (note = outlay.note.presence)
+                span.has-tip data-tooltip='' title="#{note}"= number_to_yen(outlay.amount)
+              - else
+                = number_to_yen(outlay.amount)
+            / .small-2.columns.text-center 操作
