アコーディオンのidはhelperで生成するようにした

--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -3,12 +3,12 @@
 dl.accordion data-accordion=''
   - outlay_months.each_with_index do |(month, outlays), index|
     dd
-      = link_to "#accordion-outlay-#{month.strftime('%Y-%m')}" do
+      = link_to "##{accordion_css_id(month)}" do
         .clearfix
           span.left #{month.strftime('%Y/%m')}
           span.right #{number_to_yen(outlays.sum(&:amount))}
 
-      .content id="accordion-outlay-#{month.strftime('%Y-%m')}" class=(index.zero? ? 'active' : '')
+      .content id="#{accordion_css_id(month)}" class=(index.zero? ? 'active' : '')
         .row
           .small-1.columns.text-center=t :created_at,      scope: scope
           .small-3.large-2.columns.text-center=t :expense_item_id, scope: scope
