--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -13,12 +13,8 @@ dl.accordion data-accordion=''
           .small-1.columns.text-center=t :created_at, scope: scope
           .small-3.large-2.columns.text-center=t :expense_item_id, scope: scope
           .small-6.large-7.columns.text-right=t :amount, scope: scope
-        - outlays.each do |outlay|
+        - OutlayDecorator.decorate_collection(outlays).each do |outlay|
           .row
             .small-1.columns.text-center= outlay.created_at.day
             .small-3.large-2.columns.text-center= outlay.expense_item.name
-            .small-6.large-7.columns.text-right
-              - if (note = outlay.note.presence)
-                span.has-tip data-tooltip='' title="#{note}"= number_to_yen(outlay.amount)
-              - else
-                = number_to_yen(outlay.amount)
+            .small-6.large-7.columns.text-right= outlay.display_amount
