--- a/app/views/outlays/_form.html.slim
+++ b/app/views/outlays/_form.html.slim
@@ -4,10 +4,10 @@
         = f.label :expense_item_id, class: 'right inline'
     .small-10.columns
       .row.collapse
-        .small-11.columns.error
+        .small-10.large-11.columns.error
           = f.collection_select :expense_item_id, current_user.expense_items.ordered, :id, :name
           = f.error_messages_on :expense_item_id
-        .small-1.columns
+        .small-2.large-1.columns
           = link_to expense_items_path, class: 'button postfix', id: 'expense_item_setting' do
             = fa_icon 'cog 2x', style: 'line-height: 48px;'
   .row
