--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,21 @@ html
     = javascript_include_tag 'vendor/modernizr'
     = csrf_meta_tags
   body
+    .contain-to-grid
+      .large-8.large-centered.column
+        nav.top-bar data-topbar=''
+          ul.title-area
+            li.name
+              h1= link_to 'Flying Money', root_path
+            li.toggle-topbar.menu-icon= link_to '', '#'
+          section.top-bar-section
+            ul.right
+              - if current_user
+                li= link_to 'Sign out', destroy_user_session_path, method: :delete
+              - else
+                li= link_to 'Sign in', new_user_session_path
+                li= link_to 'Sign up', new_user_registration_path
     .row
-      .large-8.large-centered.columns
+      .large-8.large-centered.column
         = yield
     = javascript_include_tag 'application'
