--- a/app/views/outlays/_form.html.slim
+++ b/app/views/outlays/_form.html.slim
@@ -2,9 +2,9 @@
   fieldset
     legend 新規登録
     .row
-      .small-2.columns
+      .small-3.large-2.columns
           = f.label :expense_item_id, class: 'right inline'
-      .small-10.columns
+      .small-9.large-10.columns
         .row.collapse
           .small-10.large-11.columns.error
             = f.collection_select :expense_item_id, current_user.expense_items.ordered, :id, :name
@@ -13,15 +13,15 @@
             = link_to expense_items_path, class: 'button postfix', id: 'expense_item_setting' do
               = fa_icon 'cog 2x', style: 'line-height: 48px;'
     .row
-      .small-2.columns
+      .small-3.large-2.columns
         = f.label :amount, class: 'right inline'
-      .small-10.columns.error
+      .small-9.large-10.columns.error
         = f.number_field :amount, maxlength: 10, min: 0, step: 100
         = f.error_messages_on :amount
     .row
-      .small-2.columns
+      .small-3.large-2.columns
         = f.label :note, class: 'right inline'
-      .small-10.columns.error
+      .small-9.large-10.columns.error
         = f.text_field :note
         = f.error_messages_on :note
     .row
