--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -2,18 +2,21 @@ h2
   | Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
-  div
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  div
-    = f.label :password
-    br
-    = f.password_field :password, autocomplete: "off"
-  div
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  div
-    = f.submit "Sign up"
-= render "devise/shared/links"
+  .row
+    .small-3.large-2.columns
+      = f.label :email, class: 'right inline'
+    .small-9.large-10.columns
+      = f.email_field :email, autofocus: true
+  .row
+    .small-3.large-2.columns
+      = f.label :password, class: 'right inline'
+    .small-9.large-10.columns
+      = f.password_field :password, autocomplete: 'off'
+  .row
+    .small-3.large-2.columns
+      = f.label :password_confirmation, class: 'right inline'
+    .small-9.large-10.columns
+      = f.password_field :password_confirmation, autocomplete: 'off'
+  .row
+    .small-12.column
+      = f.submit 'Sign up', class: 'button right'
