ログイン情報編集画面のデザイン対応と動線の作成

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,8 @@ html
           section.top-bar-section
             ul.right
               - if current_user
+                li= link_to edit_user_registration_path do
+                  = fa_icon 'user', text: current_user.email
                 li= link_to 'Sign out', destroy_user_session_path, method: :delete
               - else
                 li= link_to 'Sign in', new_user_session_path
