--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,37 +1,46 @@
 h2
-  | Edit 
+  | Edit
   = resource_name.to_s.humanize
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
-  div
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
+  .row
+    .small-3.large-2.columns
+      = f.label :email, class: 'right inline'
+    .small-9.large-10.columns
+      = f.email_field :email, autofocus: true
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     div
-      | Currently waiting confirmation for: 
+      | Currently waiting confirmation for:
       = resource.unconfirmed_email
-  div
-    = f.label :password
-    i
-      | (leave blank if you don't want to change it)
-    br
-    = f.password_field :password, autocomplete: "off"
-  div
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  div
-    = f.label :current_password
-    i
-      | (we need your current password to confirm your changes)
-    br
-    = f.password_field :current_password, autocomplete: "off"
-  div
-    = f.submit "Update"
+  .row
+    .small-3.large-2.columns
+      = f.label :password, class: 'right inline'
+    .small-9.large-10.columns
+      i
+        | (leave blank if you don't want to change it)
+      br
+      = f.password_field :password, autocomplete: "off"
+  .row
+    .small-3.large-2.columns
+      = f.label :password_confirmation, class: 'right inline'
+    .small-9.large-10.columns
+      = f.password_field :password_confirmation, autocomplete: 'off'
+  .row
+    .small-3.large-2.columns
+      = f.label :current_password, class: 'right inline'
+    .small-9.large-10.columns
+      i
+        | (we need your current password to confirm your changes)
+      br
+      = f.password_field :current_password, autocomplete: "off"
+  .row
+    .small-12.column
+      = f.submit 'Update', class: 'button right'
 h3
   | Cancel my account
-p
-  | Unhappy? 
-  = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-= link_to "Back", :back
+.row
+  .small-3.large-2.columns
+    p
+      | Unhappy?
+  .small-9.large-10.columns
+    = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'button alert'
