--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -10,7 +10,15 @@ dl.accordion data-accordion=''
 
       .content id="#{accordion_css_id(month)}" class=(index.zero? ? 'active' : '')
         .row
-          .large-6.columns
+          .samll-12.columns
+            - outlays.group_by {|o| o.expense_item.name }.each do |expense_item_name, ol|
+              .row
+                .small-2.columns.text-right= expense_item_name
+                .small-2.columns.text-right= number_to_yen(ol.sum(&:amount))
+                .small-8.columns
+                  .progress
+                    .meter.text-center style="width: #{(ol.size/outlays.size.to_f)*100}%"
+          .small-12.columns
             .row
               .small-2.columns.text-center.radius.secondary.label=t :created_at, scope: scope
               .small-4.columns.text-center.radius.secondary.label=t :expense_item_id, scope: scope
@@ -20,11 +28,3 @@ dl.accordion data-accordion=''
                 .small-2.columns.text-right= outlay.created_at.day
                 .small-4.columns.text-right= outlay.expense_item.name
                 .small-6.columns.text-right= outlay.display_amount
-          .large-6.columns
-            - outlays.group_by {|o| o.expense_item.name }.each do |expense_item_name, ol|
-              .row
-                .small-3.columns= expense_item_name
-                .small-9.columns
-                  .progress
-                    .meter.text-center style="width: #{(ol.size/outlays.size.to_f)*100}%"
-                      = number_to_yen(ol.sum(&:amount))
