--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html
       | FlyingMoney
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'vendor/modernizr'
+    = javascript_include_tag '//www.google.com/jsapi', 'chartkick'
     = csrf_meta_tags
   body
     .contain-to-grid
