--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -23,5 +23,5 @@ dl.accordion data-accordion=''
                 .small-4.columns.text-right= outlay.expense_item.name
                 .small-6.columns.text-right
                   = outlay.display_amount
-                  = link_to outlay_path(outlay), method: :delete, id: "remove_outlay_#{outlay.id}" do
+                  = link_to outlay_path(outlay), method: :delete, id: "remove_outlay_#{outlay.id}", data: {confirm: '本当に削除しますか?'} do
                     = fa_icon 'trash-o'
