--- a/app/views/outlays/index.html.slim
+++ b/app/views/outlays/index.html.slim
@@ -2,7 +2,7 @@
 
 .row
   .samll-12.columns
-    / = bar_chart Outlay.amounts_by_expense_item(month)
+    = bar_chart @outlay_sums_by_expense_item
   .small-12.columns
     .row
       .small-2.columns.text-center.radius.secondary.label=t :created_at, scope: scope
