--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -1,27 +1,26 @@
 - scope = 'activerecord.attributes.outlay'
 
 dl.accordion data-accordion=''
-  - outlay_months.each_with_index do |(month, outlays), index|
+  - outlay_months.each_with_index do |(date, outlays), index|
+    - year_month = date.strftime('%Y/%m')
     dd
-      = link_to "##{accordion_css_id(month)}" do
+      = link_to "##{accordion_css_id(date)}", 'data-year-month' => year_month do
         .clearfix
-          span.left= month.strftime('%Y/%m')
+          span.left= year_month
           span.right= number_to_yen(outlays.sum(&:amount))
 
-      .content id="#{accordion_css_id(month)}" class=(index.zero? ? 'active' : '')
-        .row
-          .samll-12.columns
-            = bar_chart Outlay.amounts_by_expense_item(month)
-          .small-12.columns
-            .row
-              .small-2.columns.text-center.radius.secondary.label=t :created_at, scope: scope
-              .small-4.columns.text-center.radius.secondary.label=t :expense_item_id, scope: scope
-              .small-6.columns.text-center.radius.secondary.label=t :amount, scope: scope
-            - OutlayDecorator.decorate_collection(outlays).each do |outlay|
-              .row
-                .small-2.columns.text-right= outlay.created_at.day
-                .small-4.columns.text-right= outlay.expense_item.name
-                .small-6.columns.text-right
-                  = outlay.display_amount
-                  = link_to outlay_path(outlay), method: :delete, id: "remove_outlay_#{outlay.id}", data: {confirm: '本当に削除しますか?'} do
-                    = fa_icon 'trash-o'
+      .content id="#{accordion_css_id(date)}"
+        /class=(index.zero? ? 'active' : '')
+        div id="outlays-monthly-#{date.strftime('%Y-%m')}"
+
+coffee:
+  show_outlays_monthly = (id, year_month) ->
+    $.ajax(url: year_month).done (html) ->
+      $(id).html html
+
+  $ ->
+    $('a[data-year-month]').click (e) ->
+      year_month = $(this).data('year-month').split('/')
+      year  = year_month[0]
+      month = year_month[1]
+      show_outlays_monthly("#outlays-monthly-#{year}-#{month}", "/#{year}/#{month}")
