月毎の支出合計額を表示するロジックを変更した

--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -1,4 +1,4 @@
 = render partial: 'outlays/form', locals: {outlay: @outlay}
 
 #outlay_list
-  = render partial: 'outlays/list', locals: {outlay_months: @outlay_months}
+  = render partial: 'outlays/list'
