ajaxを使っているときにtooltipが有効にならない不具合を修正
@see https://github.com/zurb/foundation/issues/4658

--- a/app/views/outlays/_list.html.slim
+++ b/app/views/outlays/_list.html.slim
@@ -18,6 +18,7 @@ coffee:
       url: year_month,
       success: (html) ->
         $(id).html html
+        $(document).foundation('tooltip')
 
   $ ->
     $accordion_label = $('dl.accordion dd a[data-year-month]')
