テストでは図を表示しないようにした
良い方法があれば stub 等を使ってプロダクトコードは変えずに
テストコード側で何とかしたい。

--- a/app/views/outlays/index.html.slim
+++ b/app/views/outlays/index.html.slim
@@ -2,7 +2,8 @@
 
 .row
   .samll-12.columns
-    = bar_chart @outlay_sums_by_expense_item, id: "outlay-chart-#{params[:year]}-#{params[:month]}"
+    - unless Rails.env.test?
+      = bar_chart @outlay_sums_by_expense_item, id: "outlay-chart-#{params[:year]}-#{params[:month]}"
   .small-12.columns
     .row
       .small-2.columns.text-center.radius.secondary.label=t :created_at, scope: scope
