--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,6 +21,8 @@ html
           section.top-bar-section
             ul.right
               - if current_user
+                - if current_user.admin?
+                  li= link_to 'Admin', rails_admin_path
                 li= link_to edit_user_registration_path do
                   = fa_icon 'user', text: current_user.email
                 li= link_to 'Sign out', destroy_user_session_path, method: :delete
